# mcp-tools

./: .gitignore  CLAUDE.md  EMAIL_PARSER_README.md  README.md  act  doc_processing-rocm_support.md  doc_processing-session_notifications.md  kaggle_api_architecture.md  pyproject.toml  requirements.txt  server.py  server_discord.py  server_documents.py  server_documents_wrapper.py  server_email_parser.py  server_evangeline.py  server_learning.py  start_documents_rocm.sh  test_extract_from_emails.py  vikunja_api-docs.json
