[project]
name = "mcp-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "click==8.3.1",
    "cryptography==46.0.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "marker-pdf>=1.10.2",
    "mcp==1.26.0",
    "pip==24.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pyjwt==2.11.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "referencing==0.37.0",
    "requests>=2.32.5",
    "rpds-py==0.30.0",
    "sqlite-vec>=0.1.7",
    "sse-starlette==3.2.0",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]
